# seal

./: .coverage  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  VPE_SPEC_v1.md  install_p94.txt  mkdocs.yml  p92_test_results.txt  pyproject.toml  run_p92_tests.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: benchmark.yml  docs.yml  lint.yml  publish.yml  test.yml
docs/: GETTING_STARTED.md  PRE_OPEN_SOURCE_CHECKLIST.md  PRODUCT_STRATEGY.md  RAISE_THE_BAR_PLAN.md  SESSION_HANDOFF_2026-06-11_MORNING.md  THESIS_AND_VALIDATION.md  architecture.md  cli.md  index.md  integration.md  license.md  p7_4_adversarial_generation.md  patterns_candidates.md  quickstart.md  spec.md  threat-model.md
docs/api/: audit.md  broker.md  core.md  credential_store.md  epd.md  index.md  integration.md  key_manager.md  key_store.md  rollback.md  store.md  vpe.md
integration/: division_vpe_signer.py  hermes_vpe_middleware.py  vpe_rollback.sh
proposals/: SEP-vpe-signing-layer.mdx  lamarck-first-client.md  mcp_signing_extension.md  owasp_agentic_security_vpe.md
scripts/: deploy-docs.sh
seal/: __init__.py  __main__.py  _base.py  _fix_all.sh  _import_patch.txt  audit.py  broker.py  cli.py  cli_new.txt  cli_tmp.py  core.py  credential_store.py  debug.txt  division_audit.py  epd.py  federation.py  hardware.py  key_manager.py  key_store.py  memory.py  rollback.py  rotator.py  secrets_broker.py  store.py  vpe.py
seal/epd/: __init__.py  config.py  fuzzer.py  llm_classifier.py  models.py  patterns.py  scanner.py
seal/integration/: __init__.py  division_vpe_audit.py  division_vpe_signer.py  hermes_skills_guard.py  hermes_vpe_middleware.py
tests/: conftest.py  generate_vectors.py  run_p92_tests.py  test_audit.py  test_broker.py  test_cli_new.py  test_core.py  test_credential_store.py  test_crypto_bypass.py  test_division_audit.py  test_division_vpe_signer_nonce.py  test_e2e_real_tools.py  test_epd.py  test_epd_latent_injection.py  test_epd_modern_techniques.py  test_federation.py  test_graceful_degradation.py  test_hardware.py  test_hardware.txt  test_interop_vectors.py  test_key_lifecycle.py  test_key_manager.py  test_memory.py  test_secrets_broker.py  test_store.py
tests/fixtures/: clean_prompts.py  (+4 more)
vpe-go/: .gitignore  VPE_SPEC_GO.md  go.mod
vpe-rust/: Cargo.toml  VPE_SPEC_RUST.md
vpe-rust/src/: canonical.rs  lib.rs
vpe-rust/tests/: core_test.rs  interop_vectors_test.rs
vpe-ts/: VPE_SPEC_TS.md  jest.config.js  package-lock.json  package.json  safe_write.py  tsconfig.json  write_test.py
(+9 files in other folders)
