[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seal-vpe"
version = "0.1.0"
description = "Verified Prompt Envelope Protocol — cryptographic provenance for AI agent prompts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Nous Research"},
]
keywords = ["vpe", "prompt-security", "ai-security", "cryptography", "ed25519"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography>=41.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/rezearcher/seal"
Repository = "https://github.com/rezearcher/seal"
Documentation = "https://github.com/rezearcher/seal#readme"
Changelog = "https://github.com/rezearcher/seal/blob/main/CHANGELOG.md"

[project.scripts]
seal = "seal.cli:main"

[tool.setuptools.packages.find]
include = ["seal*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.coverage.run]
source = ["seal"]
omit = ["seal/epd/llm_classifier.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80
